<resources>
    <string name="app_name">4nalfinal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_page">صفحه اصلی</string>
    <string name="login">ورود یا ثبت نام</string>
    <string name="category">دسته بندی محصولات</string>
    <string name="shopping_cart">سبد خرید</string>
    <string name="most_popular">محبوب\u200cترین\u200cها</string>
    <string name="most_sales">پرفروش\u200cترین\u200cها</string>
    <string name="most_seen">پربازدیدترین\u200cها</string>
    <string name="setting">تنظیمات</string>
    <string name="about_us">درباره چهار نعل</string>
    <string name="search">جستجو</string>
    <string name="navigation_header_login_register">ورود یا ثبت نام</string>
    <string name="user_name_login_edit_text">ایمیل</string>
    <string name="user_name_login">نام کاربری</string>
    <string name="password_login">کلمه عبور</string>
    <string name="show_password">نمایش کلمه عبور</string>
    <string name="forgot_password">کلمه عبور را فراموش کردم!</string>
    <string name="register">ثبت نام</string>
    <string name="sign_in">ورود</string>
    <string name="see_full_list">مشاهده لیست کامل</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login_activity_title">ورود یا ثبت نام</string>
    <string name="description_profile_layout">برای استفاده از تمامی امکانات 4 نعل، وارد حساب کاربری\u200cتان شوید.</string>
    <string name="provision">قوانین</string>
    <string name="usual_questions">سوالات متداول</string>
    <string name="recent_seen">بازدیدهای اخیر</string>
    <string name="bookmarked">نشان\u200cشده ها</string>
    <string name="my_advertising">آگهی\u200cهای من</string>
    <string name="filter">فیلتر</string>
    <string name="newest_notices">جدیدترین آگهی\u200cها</string>
    <string name="my_notices">آگهی\u200cهای من</string>
    <string name="newest">جدیدترین‌ها</string>
    <string name="favorites_list">لیست علافه\u200cمندی\u200cها</string>
    <string name="comparison_product">مقایسه</string>
    <string name="product_description">توضیحات کالا</string>
    <string name="price">قیمت</string>
    <string name="add_to_shopping_cart">افزودن به سبد خرید</string>
    <string name="product_specification">مشخصات کامل کالا</string>
    <string name="stock_status">وضعیت موجودی</string>
    <string name="stock">موجودی</string>
    <string name="weight">وزن</string>
    <string name="dimension">ابعاد</string>
    <string name="color">رنگ</string>
    <string name="size">اندازه</string>
    <string name="brand">برند</string>
    <string name="shopping_bag">سبد خرید</string>
    <string name="notice_information">اطلاعات آگهی</string>
    <string name="group">گروه</string>
    <string name="location">محل</string>
    <string name="province">استان</string>
    <string name="province_2">استان:</string>
    <string name="call_information">اطلاعات تماس</string>
    <string name="last_name_2">نام خانوادگی:</string>
    <string name="phone_number_2">شماره تماس:</string>
    <string name="email_2">ایمیل:</string>
    <string name="register_title">ثبت نام</string>
    <string name="submit">ثبت</string>
    <string name="products_final_price">قیمت نهایی محصولات:</string>
    <string name="price_unit">تومان</string>
    <string name="finalize_order">نهایی کردن سفارش</string>
    <string name="aaa">dsffjkjkl ghj xkl</string>
    <string name="size2">سایز:</string>
    <string name="color2">رنگ:</string>
    <string name="number_2">تعداد:</string>
    <string name="price_one_2">قیمت واحد:</string>
    <string name="price_all_2">قیمت تعداد:</string>
    <string name="name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="company_name">نام شرکت</string>
    <string name="email">ایمیل</string>
    <string name="phone_number">تلفن</string>
    <string name="postal_code">کد پستی</string>
    <string name="address">آدرس دقیق</string>
    <string name="city">شهر</string>
    <string name="go_to_pay">ورود به صفحه پرداخت</string>
    <string name="sale_notice">آگهی فروش</string>
    <string name="request_notice">آگهی درخواست</string>
    <string name="kind_of_notice">نوع آگهی</string>
    <string name="keshesh">کشش</string>
    <string name="riding_service">لوازم سوارکاری</string>
    <string name="gender">جنسیت</string>
    <string name="nar">نر</string>
    <string name="madde">ماده</string>
    <string name="akhte">اخته</string>
    <string name="horse_race">نژاد اسب</string>
    <string name="horse">اسب</string>
    <string name="create_notice">ایجاد آگهی</string>
    <string name="age_horse">سن اسب</string>
    <string name="year_2">سال:</string>
    <string name="month_2">ماه:</string>
    <string name="location_horse">موقعیت اسب</string>
    <string name="city_2">شهر:</string>
    <string name="adaptive">توافقی</string>
    <string name="swap">معاوضه</string>
    <string name="enter_price">ورود قیمت</string>
    <string name="swap_with_2">معاوضه با:</string>
    <string name="swap_with">معاوضه با</string>
    <string name="price_2">قیمت:</string>
    <string name="create_notice_2">ایجاد آگهی:</string>
    <string name="kind_of_notice_2">نوع آگهی:</string>
    <string name="gender_2">جنسیت:</string>
    <string name="horse_race_2">نژاد اسب:</string>
    <string name="age_horse_2">سن اسب:</string>
    <string name="location_horse_2">موقعیت اسب:</string>
    <string name="horse_name_2">نام اسب:</string>
    <string name="horse_name">نام اسب</string>
    <string name="horse_color_2">رنگ اسب:</string>
    <string name="dad_name_2">نام پدر:</string>
    <string name="dad_name">نام پدر</string>
    <string name="mom_name_2">نام مادر:</string>
    <string name="mom_name">نام مادر</string>
    <string name="ordering">چینش</string>
</resources>
