<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/search_toolbar_shop"
            android:title="@string/search"
            android:icon="@drawable/ic_search"
            app:showAsAction="always|collapseActionView"
            app:actionViewClass="android.support.v7.widget.SearchView"/>

        <item
            android:id="@+id/menu_category_shop"
            android:icon="@drawable/ic_category"
            android:title="@string/category"
            app:showAsAction="always"/>
    </group>
    <group>

        <item
            android:id="@+id/menu_shopping_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/shopping_cart"
            app:showAsAction="always"/>
    </group>

    <group>
        <item
            android:id="@+id/menu_most_sales"
            android:title="@string/most_sales" />
        <item
            android:id="@+id/navigation_menu_most_seen"
            android:title="@string/most_seen" />
        <item
            android:id="@+id/menu_newest"
            android:title="@string/newest" />
    </group>
    <item
        android:id="@+id/menu_about_us"
        android:title="@string/about_us" />

</menu>