<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_group_shop_layout">
        <item
            android:id="@+id/menu_most_sales"
            android:title="@string/most_sales"
            android:icon="@drawable/ic_most_sales"/>
        <item
            android:id="@+id/navigation_menu_most_seen"
            android:title="@string/most_seen"
            android:icon="@drawable/ic_most_seen"/>
        <item
            android:id="@+id/menu_newest"
            android:title="@string/newest"
            android:icon="@drawable/ic_newest"/>
    </group>

    <group android:id="@+id/menu_group_2_shop_layout">
        <item
            android:id="@+id/navigation_menu_show_favorites_list_shop"
            android:title="@string/favorites_list"
            android:icon="@drawable/ic_favorite"/>
    </group>
    <item
        android:id="@+id/menu_about_us"
        android:title="@string/about_us" />

</menu>