<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_toolbar_advertising"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/filter_toolbar_advertising"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always"/>
<group>
    <item
        android:id="@+id/my_notices_menu_item"
        android:title="@string/my_notices"
        android:icon="@drawable/ic_my_notices"
        app:showAsAction="never"/>
</group>

    <group android:id="@+id/menu_group_notice_layout">
    <item
        android:id="@+id/bookmarked_menu_item"
        android:title="@string/bookmarked"
        android:icon="@drawable/ic_bookmark"
        app:showAsAction="never|withText"/>

    <item
        android:id="@+id/recent_seen_menu_item"
        android:title="@string/recent_seen"
        android:icon="@drawable/ic_recent_seen"
        app:showAsAction="never"/>
    </group>

    <item
        android:id="@+id/setting_menu_item"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"/>


</menu>