<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/description_profile_layout"
            android:textSize="@dimen/standard_text_size" />


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/standard_margin_x2"
            android:background="@drawable/login_button_form_frame"
            android:padding="@dimen/standard_margin_x2"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/standard_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/standard_margin_x2"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:padding="@dimen/standard_margin"
            android:text="@string/setting"
            android:textSize="@dimen/standard_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_margin"
            android:text="@string/provision"
            android:textSize="@dimen/standard_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_margin"
            android:text="@string/about_us"
            android:textSize="@dimen/standard_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_margin"
            android:text="@string/usual_questions"
            android:textSize="@dimen/standard_text_size" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
