<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_profile_layout"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginRight="@dimen/standard_margin"
                    android:textSize="@dimen/standard_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/standard_margin_x2"
                    android:text="@string/login"
                    android:textSize="@dimen/standard_text_size"
                    android:textColor="@android:color/white"
                    android:background="@drawable/login_buttom_form_frame"/>

                <View
                    android:layout_marginTop="@dimen/standard_margin_x2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:textSize="@dimen/standard_text_size"
                    android:padding="@dimen/standard_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/provision"
                    android:textSize="@dimen/standard_text_size"
                    android:padding="@dimen/standard_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textSize="@dimen/standard_text_size"
                    android:padding="@dimen/standard_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usual_questions"
                    android:textSize="@dimen/standard_text_size"
                    android:padding="@dimen/standard_margin"/>

            </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>


</FrameLayout>