<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".activity.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:title="@string/register_title" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/text_view_user_name_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/user_name_login"
        android:textColor="@android:color/black"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_register" />

    <EditText
        android:id="@+id/edit_text_user_name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/form_margin"
        android:layout_marginRight="@dimen/form_margin"
        android:layout_marginTop="@dimen/standard_margin_x2"
        android:background="@drawable/login_form_frame"
        android:gravity="right"
        android:inputType="text"
        android:textSize="@dimen/default_text_size"
        android:hint="@string/user_name_login_edit_text"
        android:imeOptions="actionNext"
        android:padding="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@id/text_view_user_name_register" />

    <TextView
        android:id="@+id/text_view_password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin_x2"
        android:text="@string/password_login"
        android:textColor="@android:color/black"
        android:gravity="right"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_user_name_register" />

    <EditText
        android:id="@+id/edit_text_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/form_margin"
        android:layout_marginRight="@dimen/form_margin"
        android:layout_marginTop="@dimen/standard_margin_x2"
        android:background="@drawable/login_form_frame"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textSize="@dimen/default_text_size"
        android:padding="@dimen/standard_margin"
        android:ems="10"
        android:hint="@string/password_login"
        app:layout_constraintTop_toBottomOf="@id/text_view_password_register" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/form_margin_x2"
        android:layout_marginRight="@dimen/form_margin_x2"
        android:layout_marginTop="@dimen/standard_margin_x8"
        android:background="@drawable/login_button_form_frame"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/standard_text_size_x1.5"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password_register" />

</android.support.constraint.ConstraintLayout>